# wgpu-igniter

./: .pre-commit-config.yaml  Cargo.toml  README.md  build.rs  run-web.sh
examples/canvas_plugin/: fragment_shader.wgsl  main_scenario.rs
examples/canvas_raw/: canvas_raw.rs  main.rs  main_scenario.rs
examples/cube_instances/: cube_instances.wgsl  main.rs  main_scenario.rs
examples/cube_normals/: main.rs  main_scenario.rs
examples/cube_shader_transition/: main.rs  main_scenario.rs
examples/cube_simple/: main_scenario.rs
examples/cube_two/: main.rs  main_scenario.rs
examples/egui_integration/: egui_integration.rs  main.rs
examples/egui_integration_direct/: main.rs  main_scenario.rs
examples/egui_integration_plugin/: fragment_shader.wgsl  main_scenario.rs
examples/egui_integration_scene/: main_scenario.rs
examples/scenario_sequence/: main.rs  main_scenario.rs  scenario_cube.rs  scenario_triangle.rs
examples/triangle_direct/: main.rs  main_scenario.rs
examples/triangle_raw/: main_scenario.rs  triangle_raw.wgsl
examples/triangle_rotation/: main_scenario.rs
src/: cameras.rs  draw_context.rs  launcher.rs  lib.rs  main.rs  main_scenario.rs  plugins.rs  primitives.rs  render_loop.rs  scenario.rs  scene.rs  scene_3d.rs  window.rs
src/plugins/: canvas.rs  canvas.wgsl  egui.rs  scene_3d.rs
src/primitives/: canvas.rs  cube.rs  triangle.rs
src/support/: egui.rs
tests/: run_examples_generated.rs  run_main.rs
web/: index.html
