[package]
name = "wgpu-lite-wrapper"
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/vhiribarren/wgpu-lite-wrapper"
categories = ["graphics"]
keywords = ["wgpu", "graphics", "webgpu"]
description = "A lightweight wrapper around wgpu-rs to simplify the creation of 3D applications."

[features]
default = ["egui"]
egui = ["dep:egui", "dep:egui-wgpu", "dep:egui-winit"]

[dependencies]
anyhow = "1.0.97"
bytemuck = { version = "1.22.0", features = [ "derive" ] }
cgmath = "0.18.0"
chrono = { version = "0.4.40", features = ["wasmbind"] }
fern = { version = "0.7.1", features = ["colored"] }
log = "0.4.26"
winit = { version = "0.30.9", features = ["rwh_05"] }
web-time = "1.1.0"
rayon = "1.10.0"
egui = { version = "0.31.1", optional = true }
egui-wgpu = { version = "0.31.1", optional = true }
egui-winit = { version = "0.31.1", optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
pollster = "0.4.0"
wgpu = "24.0.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0"
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
wgpu = { version = "24.0.3", features = ["webgl"] }
web-sys =  { version = "0.3.77", features = [] }

[dev-dependencies]
assert_cmd = "2.0.16"
escargot = "0.5.13"

[build-dependencies]
cargo_metadata = "0.19.2"
